# Metacity

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  Dockerfile  LICENCE  MANIFEST.in  README.md  TODO  TODO.todo  clean.sh  config.json  deploy.sh  dev-requirements.txt  docker-compose.yml  fix-macos.py  gendoc.sh  grammar.py  lego.py  main.cpp  makefile  makefile-deploy  out.txt  out2.txt  out3.json  out4.json  out5.json  pyproject.toml  release.sh  report.txt  requirements.test.txt  requirements.txt  setup.py  stubgen.sh  test.py  test.sh  test2.py  test_interval.py  test_interval_size.py  test_timeline_overlay.py  tsbuild.sh  (+1 more)
.github/workflows/: ci.yaml  ci.yml  pythonCI.yml  registry.yaml  release.yaml  test.yml  version.yaml  wheel-template.yaml  wheel.yaml
TODO/: bbox.cpp  bbox.hpp  bvh.hpp  legobuilder.hpp  loaders.cpp  loaders.hpp  mesh.cpp  png.hpp  types.cpp
config/: config.json
docs/: index.html  metacity.html  search.js
docs/metacity/: core.html  datamodel.html  filesystem.html  geometry.html  geometrycpp.html  io.html  utils.html
docs/metacity/core/: export.html  legofy.html
docs/metacity/datamodel/: datastore.html  grid.html  layer.html  object.html
docs/metacity/filesystem/: base.html  datastore.html
docs/metacity/io/: geojson.html  obj.html  parse.html  shapefile.html
docs/metacity/utils/: bbox.html  encoding.html  filesystem.html
experimental/: grammar.py
metacity/: __init__.py  geometry.pyi  project.py
metacity-old/: project.py
metacity-old/geometry/: bbox.py  splitting.py
metacity-old/grid/: cache.py  slicer.py
metacity-old/helpers/: iter.py
metacity-old/helpers/dirtree/: base.py  layer.py
metacity-old/io/: cj.py  core.py
metacity-old/models/: grid.py  model.py  object.py
metacity-old/models/tiles/: object.py
metacity/core/: export.py  layout.py  legofy.py  mapper.py  migrate.py  timeline.py
metacity/core/grid/: grid.py  set.py
metacity/core/styles/: apply.py  style.py  styles.py
metacity/cxxgeometry/: attributes.hpp  bbox.cpp  bbox.hpp  bvh.hpp  cgal.hpp  geometry.cpp  interval.cpp  interval.hpp  legobuilder.cpp  legobuilder.hpp  lines.cpp  lines.hpp  models.hpp  points.cpp  points.hpp  polygons.cpp  polygons.hpp  primitive.pyi  primitives.cpp  primitives.hpp  rtree.cpp  rtree.hpp  timepoints.cpp  timepoints.hpp  triangulation.cpp  triangulation.hpp  types.cpp  types.hpp
metacity/cxxgeometry/json/: pybind11_json.hpp
metacity/datamodel/: datastore.py  grid.py  layer.py  object.py  primitives.cpp  primitives.hpp  project.py  set.py  styles.py  timeline.py
metacity/datamodel/buffers/: buffer.py  float32.py  int32.py
metacity/datamodel/grid/: config.py  grid.py
metacity/datamodel/layer/: config.py  layer.py
metacity/datamodel/models/: levels.py  set.py  tile.py
metacity/datamodel/primitives/: base.py  facets.py  lines.py  points.py
metacity/extensions/: timeline.py
metacity/filesystem/: base.py  datastore.py  file.py  grid.py  layer.py  styles.py  timeline.py
metacity/geometry/: attribute.cpp  attribute.hpp  attributes.cpp  attributes.hpp  bvh.hpp  cgal.hpp  convert.hpp  geometry.cpp  graham.hpp  graph.cpp  graph.hpp  grid.cpp  grid.hpp  layer.cpp  layer.hpp  lines.cpp  lines.hpp  main.cpp  model.cpp  model.hpp  points.cpp  points.hpp  polygons.cpp  polygons.hpp  primitive  primitive.cpp  primitive.pyi  primitives.cpp  primitives.hpp  progress.hpp  rtree.cpp  rtree.hpp  simplify.cpp  slicing.cpp  slicing.hpp  surfaces.py  triangulation.cpp  triangulation.hpp  types.cpp  types.hpp
metacity/geometry/gltf/: tiny_gltf.h
metacity/geometry/mesh_pipeline/: attribute.cpp  attribute.hpp  bbox.cpp  bbox.hpp  bvh.cpp  bvh.hpp  graham.cpp  graham.hpp  grid.cpp  grid.hpp  layer.cpp  layer.hpp  mapping.cpp  mapping.hpp  model.cpp  model.hpp  (+5 more)
metacity/geometrycpp/: attribute.cpp  attribute.hpp  attributes.cpp  attributes.hpp  bbox.cpp  bbox.hpp  bvh.cpp  cgal.cpp  cgal.hpp  geometry.cpp  geometry.h  interval.cpp  interval.hpp  legobuilder.cpp  legobuilder.hpp  lines.cpp  loaders.cpp  mesh.cpp  mesh.hpp  modelloaders.cpp  modelloaders.hpp  models.cpp  models.hpp  points.cpp  points.hpp  polygons.cpp  polygons.hpp  rtree.cpp  rtree.hpp  segments.cpp  segments.hpp  slicing.cpp  slicing.hpp  timepoints.cpp  timepoints.hpp  triangulation.cpp  triangulation.hpp  types.cpp  types.hpp
metacity/grid/: actions.py  build.py  cache.py  config.py  grid.py  slicer.py
metacity/helpers/: dirtree.py
metacity/io/: __init__.py  cj.py  core.py  geojson.py  graph.py  load.py  obj.py  osm_graph.py  parse.py  shapefile.py  stl.py
metacity/models/: grid.py  model.py  object.py
metacity/pipeline/: __main__.py  ui.py
metacity/styles/: styles.py
metacity/utils/: bbox.py  cleanup.py  encoding.py  filesystem.py  inspector.py  persistable.py  slicing.py  sorter.py  surface.py  transform.py
metacity/viewer/: __main__.py  index.html  package-lock.json  package.json  tsconfig.json  view.js.map  webpack.config.js
scripts/: deploy.sh  gmltojson.py  jsonsegment.py  redist.sh  segmentstostl.py  stlexport.py  stubgen.sh  test.sh  tilessegment.py  tilestostl.py
scripts/geometry/: export.py  geometry.py  io.py  multisurface.py
scripts/helpers/: dirtree.py  encoding.py  file.py
scripts/metacity/: project.py
scripts/models/: base.py  facets.py  lines.py  model.py  object.py  points.py
src/cpp/: geometry.cpp  types.hpp
src/metacity/: __main__.py  geometry.pyi
tba/: png.cpp
tests/: conftest.py  terrain.py  test_bbox.py  test_datamodel.py  test_datastore.py  test_encoding.py  test_grid.py  test_io.py  test_layer.py  test_layout.py  test_lego.py  test_quadtree.py  test_shapefile.py  test_timeline.py
tests/data/: car_sec_3962.sim  cityjson.py  files.py  gen_gj.py  geo.json  gjdata.json  random.py
tests/dirtree/: test_base.py
tests/geometry/: test_primitives.py
tests/grid/: test_build.py  test_build_slicing.py  test_sorter.py
tests/utils/: test_bbox.py  test_encoding.py
todos/: lego.py  oid_map.py  test.py  test_timeline_overlay.py
ts/: polygons.py  test.py
update/: makefile
update/tests/: assets.py  tree.py
(+170 files in other folders)
