[build-system]
requires = [
    "setuptools>=42",
    "pybind11~=2.9.2",
    "cmake>=3.22",
    "scikit-build>=0.15.0",
    "orjson>=3.6.4"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
build = ["cp37-*", "cp38-*", "cp39-*", "cp310-*"]
test-requires = ["pytest", "orjson>=3.6.4"]
build-verbosity = 3 

[tool.cibuildwheel.macos]
archs = ["auto", "universal2"]

[tool.cibuildwheel.linux]
archs = ["auto64"]

[tool.cibuildwheel.windows]
archs = ["auto64"]